force-app/main/default/objects/queueEvent__e/queueEvent__e.object-meta.xml
<CustomObject>
    <description>Platform events for the creation of async event queues.</description>
    <label>queueEvent</label>
    <pluralLabel>queueEvents</pluralLabel>
</CustomObject>