force-app/main/default/objects/queueEvent__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event_Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>