force-app/main/default/objects/queueEvent__e/fields/Related_sObject_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_sObject_Id__c</fullName>
    <label>Related sObject Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>